Fix overflow

--- a/src/code.css
+++ b/src/code.css
@@ -213,7 +213,7 @@ pre {
 }
 
 pre.shiki {
-  @apply rounded-lg w-115 sm:w-screen-sm md:w-180 lg:w-200 overflow-x-auto flex items-center bg-wash dark:bg-gray-900 shadow-lg my-8;
+  @apply rounded-lg overflow-x-scroll flex items-center bg-wash dark:bg-gray-900 shadow-lg my-8;
 }
 pre.shiki:hover .dim {
   opacity: 1;
